# llm-fhir-query-eval

./: .env.example  .gitignore  CLAUDE.md  CONFIG_SETUP.md  README.md  SCRAPING_GUIDE.md  STATUS.md  analyze_phenotype_docs.py  config.example.json  docker-compose.yml  generate_test_cases.py  run_batch_eval.py  tmpclaude-4aee-cwd
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/scripts/: example_scrape.py
backend/src/api/: main.py
backend/src/api/models/: evaluation.py  test_case.py
backend/src/api/routes/: results.py  test_cases.py
backend/src/evaluation/: __init__.py  code_validation.py  execution.py  runner.py  semantic.py
backend/src/fhir/: __init__.py  client.py
backend/src/llm/: __init__.py  agentic_provider.py  anthropic_provider.py  chat_backend.py  cli_delegate_provider.py  command_provider.py  copilot_provider.py  foundry_local_provider.py  openai_chat_provider.py  provider.py  tier3_methodology.md  tier3_methodology_lean.md
backend/src/scraper/: extractor.py  generator.py  phekb.py
backend/src/utils/: config.py
backend/tests/test_api/: test_patient_filters.py
backend/tests/test_evaluation/: test_code_validation.py  test_execution_difference.py  test_execution_single_query.py  test_negation_against_hapi.py
backend/tests/test_fhir/: test_subsumption.py
backend/tests/test_llm/: test_chat_backend.py  test_openai_chat_provider.py  test_openai_compat_provider.py
backend/tests/test_scripts/: test_lookup_mimicker_codes.py  test_patch_control_module.py  test_patch_path_b.py  test_rederive_expected_patients.py
cli/: setup.py
fhir-query-agent/: README.md  SKILL.md  pyproject.toml
fhir-query-agent/examples/: example_queries.md
fhir-query-agent/src/fhir_query_agent/: __init__.py  agent.py  cli.py  prompts.py  tools.py
fhir-query-agent/src/fhir_query_agent/adapters/: __init__.py  anthropic_adapter.py  base.py  ollama_adapter.py
(+22272 files in other folders)
