[tool.poetry]
name = "fhir-query-eval-backend"
version = "0.1.0"
description = "Backend API for LLM FHIR Query Evaluation Framework"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
anthropic = "^0.17.0"
openai = "^1.10.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
docker = "^7.0.0"
fhir.resources = "^7.1.0"
click = "^8.1.7"
beautifulsoup4 = "^4.12.0"
lxml = "^5.1.0"
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.15"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
