[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fhir-query-agent"
version = "0.1.0"
description = "AI-powered FHIR query generation from natural language using agentic tool use"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4",
    "requests>=2.28",
    "click>=8.0",
    "nih-umls-mcp",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest", "pytest-asyncio", "ruff", "black"]

[project.scripts]
fhir-query-agent = "fhir_query_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
